objects/PartnerProgramCountries__c.object
<CustomObject>
    <description>This custom object stores the Partner Program and its corresponding countries.</description>
    <fields>
        <fullName>CountryCode__c</fullName>
        <formula>Country__r.CountryCode__c</formula>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Holds the Partner Programs and Countries</description>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Partner Program Countries</relationshipLabel>
        <relationshipName>PartnerProgramCountries</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>PartnerProgram__c</fullName>
        <description>Holds the Partner Program and the countries</description>
        <label>Partner Program</label>
        <referenceTo>PartnerProgram__c</referenceTo>
        <relationshipLabel>Partner Program Countries</relationshipLabel>
        <relationshipName>PartnerProgramCountries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Partner Program Countries</label>
    <nameField>
        <displayFormat>PPC - {0000}</displayFormat>
        <label>Partner Program Countries Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Program Countries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>